update hadoop hbase